--- a/Home.html
+++ b/Home.html
@@ -70,7 +70,7 @@
                 <p class="u-text u-text-black u-text-3">Modeling and Simulation Engineer</p>
                 <p class="u-text u-text-black u-text-4">Image from the Ismuth of Panama</p>
                 <a href="mailto:nickpickering7@gmail.com?subject=TOPIC%20-%20from%20home%20page" class="u-active-palette-2-base u-border-2 u-border-active-palette-2-base u-border-hover-palette-2-base u-border-palette-3-base u-btn u-btn-round u-button-style u-hover-palette-2-base u-palette-3-base u-radius-12 u-text-active-white u-text-black u-text-hover-white u-btn-1">contact me</a>
-                <a href="https://github.com/npick001" class="u-active-palette-2-base u-border-2 u-border-active-palette-2-base u-border-hover-palette-2-base u-border-palette-3-base u-btn u-btn-round u-button-style u-hover-palette-2-base u-palette-3-base u-radius-12 u-text-active-white u-text-black u-text-hover-white u-btn-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="">My Github</a>
+                <a href="https://github.com/npick001" class="u-active-palette-2-base u-border-2 u-border-active-palette-2-base u-border-hover-palette-2-base u-border-palette-3-base u-btn u-btn-round u-button-style u-hover-palette-2-base u-palette-3-base u-radius-12 u-text-active-white u-text-black u-text-hover-white u-btn-2" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction="" target="_blank">My Github</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-image u-layout-cell u-left-cell u-size-36 u-image-1" data-image-width="4000" data-image-height="3000">
@@ -227,7 +227,7 @@
             C42.2,34.8,39.2,37.9,34.6,37.9z M89.6,83.7H76.2V62.2c0-5.4-1.9-9.1-6.8-9.1c-3.7,0-5.9,2.5-6.9,4.9c-0.4,0.9-0.4,2.1-0.4,3.3v22.5
             H48.7c0,0,0.2-36.5,0-40.3h13.4v5.7c1.8-2.7,5-6.7,12.1-6.7c8.8,0,15.4,5.8,15.4,18.1V83.7z"></path></svg></span>
                     </a>
-                    <a class="u-social-url" target="_blank" data-type="Custom" title="Handshake Home" href="https://app.joinhandshake.com/stu/users/32095433"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-palette-2-base u-icon-3"><img src="images/1.png" alt=""></span>
+                    <a class="u-social-url" target="_blank" data-type="Custom" title="Handshake Home" href="https://app.joinhandshake.com/stu/users/32095433"><span class="u-file-icon u-icon u-social-custom u-social-icon u-text-palette-2-base u-icon-3"><img src="images/4.png" alt=""></span>
                     </a>
                   </div>
                 </div>
